--- a/.github/workflows/vuefrontend.yml
+++ b/.github/workflows/vuefrontend.yml
@@ -28,4 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: sudo bash scripts/vuefrontend.sh
+    - run: |
+        echo '${{ secrets.SIGNAGE_PASS }}' | sudo -S su
+        sudo bash scripts/vuefrontend.sh
